estilo filtros tipo, orden y btn buscar

--- a/css/style.css
+++ b/css/style.css
@@ -309,5 +309,20 @@ header {
     transform: rotate(-90deg);
   }
 }
+.margenIzq {
+  margin-left: 3.5rem;
+}
+
+.margen {
+  margin-top: 2rem;
+}
+
+.span {
+  margin-right: 2rem;
+}
+
+.btn-small {
+  margin-top: 0.5rem;
+}
 
 /*# sourceMappingURL=style.css.map */
